############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

CHANGES
-------

* As a side effect of fixing bug #597060 additional arguments passed to testr
  run or testr list are only passed to the underlying test runner if they are
  preceeded by '--'. (Robert Collins, #597060)

IMPROVEMENTS
------------

* ``AbstractArgument`` now handles the case where additional arguments are
   present that the argument type cannot parse, but enough have been parsed for
   it to be valid. This allows optional arguments to be in the middle of a
   grammar. (Robert Collins)

* ``cli.UI`` now passed '--' down to the argument layer for handling rather
  than implicitly stripping it. (Robert Collins)

* ``DoubledashArgument`` added to allow fine grained control over the impact of
  -- in command lines. (Robert Collins)

* New argument type ``ExistingPathArgument`` for use when commands want to take
  the name of a file. (Robert Collins)

* ``testr`` will now show the version. (Robert Collins)

* ``testr last`` when just one test run has been run works again.
  (Robert Collins)

* ``testr help command`` now shows the docstring for commands (Robert Collins)

* ``testr --help command`` or ``testr command --help`` now shows the options
  for the command. (Robert Collins)

* ``Repository.get_test_run`` now raises KeyError if asked for a missing or
  nonexistant test run. (Robert Collins)

* Sphinx has been added to tie the documentation toghether (And it is available
  on testrepository.readthedocs.org). (Robert Collins)

* ``StringArgument`` now rejects '--' - it should be handled by the use of a
  ``DoubledashArgument`` where one is expected. This is a bit awkward and does
  not permit passing '--' down to a child process, so further work may be
  needed - file a bug if this affects you. (Robert Collins)

* ``testr load`` now supports passing filenames to subunit streams to load.
  (Robert Collins, #620386)
